# android-faces

app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/nathnael/faces/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/com/nathnael/faces/: FullscreenActivity.java  ImageModel.java  MainActivity.java  MemberActivity.java  PhotoActivity.java  ProjectConstants.java
app/src/main/jni/: native-lib.c
app/src/main/res/drawable/: ic_cloud_off_red.xml
app/src/main/res/drawable-v24/: record_button.xml
app/src/main/res/layout/: activity_fullscreen.xml  activity_main.xml  activity_member.xml
app/src/main/res/menu/: navigation.xml
app/src/main/res/values/: colors.xml  strings.xml  styles.xml
app/src/test/java/com/nathnael/faces/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
